k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hocbong-service
  namespace: hocbong-vn
  labels:
    app.kubernetes.io/name: hocbong-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hocbong-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
